test/test_examples/syntactic_examples/syntax_error/error_fun_def_13.zig
// Syntax error: missing ":" token between parameter id and type

const ifj = @import("ifj24.zig"); 

pub fn foo(param f64) void {

}  